--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -3,33 +3,28 @@
 
   <div  id="channels" class="col-xs-12" *ngIf="admin">
     <h1>Channels</h1>
-    <!--mat-card *ngFor="let channel of channelList" >
+    <mat-card *ngFor="let channel of channelList" >
         <mat-card-header>
-            <mat-card-title>{{channel.Name}}</mat-card-title>
-            <mat-card-subtitle>Participants: {{channel.Participants}}</mat-card-subtitle>
+            <mat-card-title>Message from: {{channel.from}} at time: {{channel.time}}</mat-card-title>
+            <mat-card-subtitle>Message itself: {{channel.message}}</mat-card-subtitle>
         </mat-card-header>
-    </mat-card-->
-
+    </mat-card>
   </div>
 
-  <div class="col-xs-12">
-    <h1 id="msg">Messages</h1>
-
-    <!-- Messages here -->
-
-    <div id="sendMsg">
-      <form [formGroup]="userChatServiceForm" (ngSubmit)="sendThisMessage(userChatServiceForm.value)">
-        <!-- <input type="text" placeholder="Type a message" name="newMessage" id="in" > -->
-        <mat-form-field appearance="fill">
-          <input class="input" matInput placeholder="Type a message" id="in" formControlName="newMessage" required>
-        </mat-form-field>
-        <button type="button">
-          <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-        </button>
-      </form>
+    <div class="col-xs-12">
+      <h1 id="msg">Messages</h1>
+        <div id="sendMsg">
+          <form [formGroup]="userChatServiceForm" (ngSubmit)="sendThisMessage(userChatServiceForm.value)">
+            <!-- <input type="text" placeholder="Type a message" name="newMessage" id="in" > -->
+            <mat-form-field appearance="fill">
+              <input class="input" matInput placeholder="Type a message" id="in" formControlName="newMessage" required>
+            </mat-form-field>
+            <button type="button">
+              <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+            </button>
+          </form>
+        </div>
     </div>
-
-  </div>
 
 </div>
 </div>
