--- a/src/app/pages/chat/chat.component.css
+++ b/src/app/pages/chat/chat.component.css
@@ -1,11 +1,15 @@
 #msg, #channels{
   text-align: center;
   margin-top: 2vw;
+  margin-bottom: 6vw; 
 }
 
 #sendMsg{
   position: fixed;
-    bottom: 0;
+  bottom: 0;
+  background-color: white;
+  width: 100%;
+  height: 5vw;
 }
 
 #in{
