--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -13,14 +13,12 @@
   </div>
 
     <div class="col-xs-12">
-      <h1 id="msg">Messages</h1>
         <div id="sendMsg">
           <form [formGroup]="userChatServiceForm" (ngSubmit)="sendThisMessage(userChatServiceForm.value)">
-            <!-- <input type="text" placeholder="Type a message" name="newMessage" id="in" > -->
             <mat-form-field appearance="fill">
               <input class="input" matInput placeholder="Type a message" id="in" formControlName="newMessage" required>
             </mat-form-field>
-            <button type="button">
+            <button type="button" (click)="sendThisMessage(userChatServiceForm.value)">
               <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
             </button>
           </form>
