Inclusion of calendar, API modification

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,44 @@
-<p>home works!</p>
+
+<div class="calendar">
+
+    <h4> {{monthName}} {{year}}</h4>
+
+    <table >
+    <thead>
+        <tr>
+            <th>Sunday</th><th>Monday</th><th>Tuesday</th><th>Wednesday</th><th>Thursday</th><th>Friday</th><th>Saturday</th>
+        </tr>
+    </thead>
+    <tbody>  
+        <tr id="x">  
+            <td *ngFor="let entry of weekOneArray">{{entry}}</td>  
+        </tr>  
+    </tbody> 
+    <tbody>  
+        <tr >  
+            <td *ngFor="let entry of weekTwoArray">{{entry}}</td>  
+        </tr>  
+    </tbody> 
+    <tbody>  
+        <tr >  
+            <td *ngFor="let entry of weekThreeArray">{{entry}}</td>  
+        </tr>  
+    </tbody> 
+    <tbody>  
+        <tr >  
+            <td *ngFor="let entry of weekFourArray">{{entry}}</td>  
+        </tr>  
+    </tbody> 
+    <tbody>  
+        <tr >  
+            <td *ngFor="let entry of weekFiveArray">{{entry}}</td>  
+        </tr>  
+    </tbody> 
+    <tbody>  
+        <tr >  
+            <td *ngFor="let entry of weekSixArray">{{entry}}</td>  
+        </tr>  
+    </tbody> 
+    </table>
+
+</div>
