--- a/src/app/rate-dialog/rate-dialog.component.html
+++ b/src/app/rate-dialog/rate-dialog.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="submit(form.value)">
   <h1 mat-dialog-title>Rate how much danger you are in (out of 3)</h1>
-  <h3>1 - In need of a house visit from the cops.</h3>
-  <h3>2 - Need cops as soon as possible. </h3>
+  <h3>1 - In need of a house visit from the police.</h3>
+  <h3>2 - Need police as soon as possible. </h3>
   <h3>3 - Emergency. Need immediate assistance.</h3>
   <mat-dialog-content>
     <mat-form-field>
