--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -4,6 +4,7 @@
   <div  id="channels" class="col-xs-12">
     <!-- <div  id="channels" class="col-xs-12" *ngIf="admin"></div> -->
     <h1>Chat History</h1>
+    <p>Type exit to leave chat</p>
     <mat-card *ngFor="let channel of channelList" >
         <mat-card-header>
             <mat-card-title>Message from: {{channel.user}} at time: {{channel.timestamp}}</mat-card-title>
@@ -21,6 +22,7 @@
             <button type="button" (click)="sendThisMessage(userChatServiceForm.value)">
               <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
             </button>
+            <!-- <button *ngIf="!admin" mat-button (click)="exitChat()">Exit Chat</button> -->
           </form>
         </div>
     </div>
