--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,21 @@
-<router-outlet></router-outlet>
+
+        <header id="header">
+          <img src="assets/images/flower.gif">
+          <div class="one"><a href="index.html">Daisy</a></div>
+          <nav class="links">
+            <ul>
+              <li><a href="/home">Calendar</a></li>
+              <li><a href="/topics">Topics</a></li>
+              <li><a href="/period">Period</a></li>
+              <li><a href="/language">Mental</a></li>
+              <li><a href="/profile">GBV</a></li>
+              <li><a href="/chat">Chat</a></li>
+              <li><a href="/help">Help</a></li>
+              <li id="two"><a href="/login">Login</a></li>
+              <li id="two"><a href="/register">Register</a></li>
+            </ul>
+          </nav>
+        </header>
+
+
+        <router-outlet></router-outlet>
