--- a/src/app/pages/topics/topics.component.html
+++ b/src/app/pages/topics/topics.component.html
@@ -1,49 +1,68 @@
-
-
-
-<h1 class="main-title">Help Centre</h1>
-<p class="why">Use the options below to get quick and effective assistance.<p>
+<h1 class="main-title">Know your body and worth</h1>
+<p class="why"> Women all over the world go through similar challanges, find out more about your body and value. <p>
 
 <div class="container" >
-    <div class="flex-container" fxLayoutWrap fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-evenly center" >
+    <div class="flex-container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-evenly center" >
 
         <mat-card class="example-card">
 
-    <img  mat-card-image src="assets/images/sos.png" >
+    <img  mat-card-image src="assets/images/tester.png" >
     <mat-card-content>
       <p>
-          If you are in need of immediate assistance regarding an abusive situation, or know of someone who needs assistance
-          click on the button below.
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
       </p>
     </mat-card-content>
     <mat-card-actions>
-        <button name="button" (click)="btnsos()" mat-button>SOS</button>   <!-- SOS BUTTON -->
+        <button a routerLink="/language" mat-button>Learn More</button>
       </mat-card-actions>
   </mat-card>
 
 <mat-card class="example-card">
-    <img  mat-card-image src="assets/images/chat.png" >
+    <img  mat-card-image src="assets/images/gbv.png" >
     <mat-card-content>
       <p>
-        Want to find out more information on how to get help, chat with one of our friendly psycologists. Click on the button below to begin chatting with us.
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
       </p>
     </mat-card-content>
     <mat-card-actions>
-        <button name="button" (click)="route()" mat-button>Chat</button>   <!-- CHAT BUTTON -->
+        <button a routerLink="/profile" mat-button>Learn More</button>
+      </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <img  mat-card-image src="assets/images/cycle.png">
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button a routerLink="/period" mat-button>Learn More</button>
       </mat-card-actions>
   </mat-card>
 
 </div>
 </div>
-  <!--  -->
 
 
-<!--
-<button type="button" name="button" (click)="btnsos()">SOS</button>
-<br>
-<button type="button" name="button" (click)="route()">Get chat support</button>
 
- -->
+
+
 
 
 
