--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,49 +1,57 @@
 .container{
-    background-color: #7C593A;
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+  background-image: url("../../../assets/images/new.jpg");
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
 
 
 h1{
-    margin-top: 1rem;
-    font-family: keep-calm;
+  margin-top: 1rem;
+  font-family: keep-calm;
 }
 
 
 .btns{
-    background-color: #7C593A;
-    color:white
+  background-color: #7C593A;
+  color:white
 }
 
 #one{
-    margin: 5%;
+  margin: 5%;
 }
 
 .regForm{
-    width: 30%;
-    text-align: center;
-    margin-left: 10rem;
+   max-width: 30rem;
+  text-align: center;
+  margin-left: 60rem;
+  margin-top: 20rem;
+  /* height: 300px; */
 }
 
 .regFormContent{
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
-.cardTitle{
-    margin-left: 1rem;
-    margin-top: 1rem;
-}
+/* .cardTitle{
+  margin-left: 1rem;
+  margin-top: 1rem;
+} */
 #passError{
-    color: red;
+  color: red;
 }
 
 
 img{
-    width: 100%;
-    height: 100%;
+  width: 75%;
+  height: 75%;
+  padding-left: 3rem;
+  padding-top: 1rem;
+}
+
+.cen{
+  text-align: center;
 }
