--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <div class="flex-container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center none">
+    <div class="flex-container" fxLayout="row" fxLayoutAlign="center center">
         <mat-card class="regForm">
             <mat-card-header>
-                <h1>Login</h1>
+                <img mat-card-image src="assets/images/loginnew.png">
             </mat-card-header>
             <mat-card-content class="regFormContent">
                 <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)">
