--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@font-face{
+    font-family: keep-calm;
+    src: url('./assets/keep_calm/KeepCalm-Medium.ttf') format("opentype");
+
+  }
