--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,6 +8,11 @@
 <div class="container">
 <div class="calendar">
 
+  <button type="button" routerLink="/help">
+    <i class="fa fa-frown-o" aria-hidden="true"></i>
+    My period - 12 to 17 August
+  </button>
+
     <h3> {{monthName}} {{year}}</h3>
 
     <table >
@@ -23,7 +28,7 @@
     </tbody>
     <tbody>
         <tr >
-            <td *ngFor="let entry of weekTwoArray">{{entry}}</td>
+            <td *ngFor="let entry of weekTwoArray">{{entry}}<br></td>
         </tr>
     </tbody>
     <tbody>
