--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
               <li><a href="/language">Mental</a></li>
               <li><a href="/profile">GBV</a></li>
               <li *ngIf="!show" id="two"><a href="/login">Login</a></li>
-              <li *ngIf="!show" id="two"><a href="/signup">Register</a></li>
+              <li *ngIf="!show" id="two"><a href="/register">Register</a></li>
               <li *ngIf="show" id="two"><a (click)="logout()">Logout</a></li>
             </ul>
           </nav>
